--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,24 +1,24 @@
 scrape_configs:
   - job_name: prometheus
-    scrape_interval: 1s
+    scrape_interval: 5s
     static_configs:
       - targets:
           - localhost:9090
 
-  - job_name: cAdvisor
+  - job_name: node_exporter
     scrape_interval: 5s
     static_configs:
       - targets:
-          - localhost:8080
+          - 192.168.0.6:9100
 
   - job_name: grafana
     scrape_interval: 5s
     static_configs:
       - targets:
-          - localhost:3000
+          - 192.168.0.6:3000
 
   - job_name: alertmanager
     scrape_interval: 5s
     static_configs:
       - targets:
-          - localhost:9093
+          - 192.168.0.6:9093
