--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,26 @@
 version: '2.0'
 services:
   prometheus:
+    network_mode: host       
     image: ajeetraina/prometheus-armv7
     ports:
       - 9090:9090
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
+      - prometheus_data:/prometheus 
     command:
       - --config.file=/etc/prometheus/prometheus.yml
     restart: always
 
   node_exporter:
+     network_mode: host
      image: prom/node-exporter-linux-armv7
      ports:
       - 9100:9100
-                     
+     restart: always   
+                    
   alertmanager:
+    network_mode: host
     image: prom/alertmanager:latest
     ports:
       - 9093:9093
@@ -33,8 +38,15 @@ services:
     # restart: always
 
   grafana:
+    network_mode: host      
     image: grafana/grafana
     user: "104"
     ports:
       - 3000:3000
     restart: always
+    volumes: 
+      - grafana_data:/var/lib/grafana
+
+volumes:
+        prometheus_data: {}
+        grafana_data: {}   
