--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,32 @@
 version: '2.0'
 services:
   prometheus:
+    network_mode: bridge
     image: ajeetraina/prometheus-armv7
-    ports:
-      - 9090:9090
+    expose:
+      - "9090"
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
     command:
       - --config.file=/etc/prometheus/prometheus.yml
+      - --web.external-url=http://localhost:9090/prometheus
+      - --web.route-prefix="/"
     restart: always
 
   node_exporter:
+     network_mode: bridge
      image: prom/node-exporter-linux-armv7
-     ports:
-      - 9100:9100
+     expose:
+      - "9100"
                      
   alertmanager:
+    network_mode: bridge
     image: prom/alertmanager:latest
-    ports:
-      - 9093:9093
+    expose:
+      - "9093"
     restart: always
 
+# This image does not work for the raspberry pi
     #  cadvisor:
     #    image: google/cadvisor:latest
     #    volumes:
@@ -33,8 +39,18 @@ services:
     # restart: always
 
   grafana:
+    network_mode: bridge
     image: grafana/grafana
     user: "104"
+    command:
+      -
+    expose:
+      - "3000"
+    restart: always
+
+  nginx:
+    network_mode: bridge
+    image: nginx:latest
     ports:
-      - 3000:3000
+      - 443:443
     restart: always
