--- a/nginx.conf
+++ b/nginx.conf
@@ -3,13 +3,18 @@ events {}
 http {
     server {
         listen              443 ssl;
-        ssl_certificate     /root/certs/example.com/example.com.crt;
-        ssl_certificate_key /root/certs/example.com/example.com.key;
+        ssl_certificate     etc/certs/monitoring.crt;
+        ssl_certificate_key etc/certs/monitoring.key;
 
         location /prometheus/ {
             auth_basic           "Prometheus";
             auth_basic_user_file /etc/nginx/.htpasswd;
-            proxy_pass           http://prometheus:9090/;
+            proxy_pass           http://prometheus-armv7:9090/;
+        }
+        location /alertmanager/ {
+            auth_basic           "Alertmanager";
+            auth_basic_user_file /etc/nginx/.htpasswd;
+            proxy_pass           http://alertmanager:9090/;
         }
     }
 }
