--- a/prometheus.yml
+++ b/prometheus.yml
@@ -3,22 +3,22 @@ scrape_configs:
     scrape_interval: 5s
     static_configs:
       - targets:
-          - localhost:9090
+          - prometheus-armv7:9090
 
   - job_name: node_exporter
     scrape_interval: 5s
     static_configs:
       - targets:
-          - 192.168.0.6:9100
+          - node-exporter-linux-armv7:9100
 
   - job_name: grafana
     scrape_interval: 5s
     static_configs:
       - targets:
-          - 192.168.0.6:3000
+          - grafana:3000
 
   - job_name: alertmanager
     scrape_interval: 5s
     static_configs:
       - targets:
-          - 192.168.0.6:9093
+          - alertmanager:9093
