--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,18 +3,18 @@ events {}
 http {
     server {
         listen              443 ssl;
-        ssl_certificate     etc/certs/monitoring.crt;
-        ssl_certificate_key etc/certs/monitoring.key;
+        ssl_certificate     monitoring.crt;
+        ssl_certificate_key monitoring.key;
 
         location /prometheus/ {
             auth_basic           "Prometheus";
             auth_basic_user_file /etc/nginx/.htpasswd;
-            proxy_pass           http://prometheus-armv7:9090/;
+            proxy_pass           http://prometheus:9090;
         }
         location /alertmanager/ {
             auth_basic           "Alertmanager";
             auth_basic_user_file /etc/nginx/.htpasswd;
-            proxy_pass           http://alertmanager:9090/;
-        }
-    }
+            proxy_pass           http://localhost:9090/;
+        }        
+     }
 }
