--- a/prometheus.yml
+++ b/prometheus.yml
@@ -3,13 +3,13 @@ scrape_configs:
     scrape_interval: 5s
     static_configs:
       - targets:
-          - prometheus-armv7:9090
+          - prometheus:9090
 
   - job_name: node_exporter
     scrape_interval: 5s
     static_configs:
       - targets:
-          - node-exporter-linux-armv7:9100
+          - node_exporter:9100
 
   - job_name: grafana
     scrape_interval: 5s
