--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,36 @@
 version: '3.0'
 services:
   prometheus:
+    network_mode: bridge
     image: ajeetraina/prometheus-armv7
-    ports:
-      - 9090:9090
+    expose:
+      - "9090"
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
       - prometheus_data:/prometheus 
     command:
       - --config.file=/etc/prometheus/prometheus.yml
-      - --web.external-url=https://192.168.0.6/prometheus
+      - --web.external-url=https://localhost/prometheus
       - --web.route-prefix=/ 
     restart: always
-    container_name: prometheus
 
   node_exporter:
+     network_mode: bridge    
      image: prom/node-exporter-linux-armv7
-     expose:
-      - "9100"
+     ports:
+        - 9100:9100
+     links:
+        - prometheus:prometheus   
 
   alertmanager:
+    network_mode: bridge     
     image: prom/alertmanager:latest
     expose:
       - "9093"
     restart: always
     container_name: alertmanager
+    links:
+        - prometheus:prometheus
 
 # This image does not work for the raspberry pi
     #  cadvisor:
@@ -39,22 +45,28 @@ services:
     # restart: always
 
   grafana:
+    network_mode: bridge       
     image: grafana/grafana
     user: "104"
-    expose:
-      - "3000"
+    ports:
+      - 3000:3000
     restart: always
     volumes:
-      - grafana_data:/var/lib/grafana
-      - ./custom.ini:/etc/grafana/custom.ini
+      - grafana_data:/var/lib/grafana  
+      - ./grafana/:/etc/grafana/
+    links:
+      - prometheus:prometheus
 
-  nginx_container:
+  nginx:
+    network_mode: bridge        
     image: nginx:latest
     ports:
       - 443:443
     restart: always
     volumes:  
       - ./nginx/:/etc/nginx/
+    links:
+      - prometheus:prometheus
 
 volumes:
         prometheus_data: {}
