--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,7 +9,7 @@ http {
         location /prometheus/ {
             auth_basic           "Prometheus";
             auth_basic_user_file /etc/nginx/.htpasswd;
-            proxy_pass           http://prometheus:9090;
+            proxy_pass           http://prometheus:9090/;
         }
         location /alertmanager/ {
             auth_basic           "Alertmanager";
