--- a/prometheus.yml
+++ b/prometheus.yml
@@ -3,25 +3,27 @@ scrape_configs:
     scrape_interval: 5s
     static_configs:
       - targets:
-          - prometheus:9090
+          - localhost:9090
+            
 
   - job_name: node_exporter
     scrape_interval: 5s
     static_configs:
       - targets:
-          - node_exporter:9100
+          - 192.168.0.6:9100
 
   - job_name: grafana
+    scheme: https
     scrape_interval: 5s
     static_configs:
       - targets:
-          - grafana:3000
+          - 192.168.0.6:3000
 
   - job_name: alertmanager
     scrape_interval: 5s
     static_configs:
       - targets:
-          - alertmanager:9093
+          - 192.168.0.6:9093
           
   - job_name: blackbox_exporter
     scrape_interval: 5s
