--- a/prometheus.yml
+++ b/prometheus.yml
@@ -30,7 +30,13 @@ scrape_configs:
     static_configs:
       - targets:
           - 192.168.0.6:9115
-   
+
+  - job_name: cadvisor
+    scrape_interval: 5s
+    static_configs:
+            - targets:
+                    - 192.168.0.6:8080
+
   - job_name: ping
     scrape_interval: 1s
     metrics_path: /probe
