--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,21 +38,21 @@ services:
         # max-file: "1"
         #max-size: "1m"      
 
-  alertmanager:
-    network_mode: bridge     
-    image: prom/alertmanager:latest
-    expose:
-      - "9093"
-    restart: always
-    container_name: alertmanager
-    links:
-        - prometheus:prometheus
-    depends_on:
-            - prometheus      
-    logging:
-      options:       
-        max-file: "1"
-        max-size: "1m"       
+        #  alertmanager:
+        # network_mode: bridge     
+        # image: prom/alertmanager:latest
+        # expose:
+        #  - "9093"
+        # restart: always
+        # container_name: alertmanager
+        # links:
+        # - prometheus:prometheus
+        #depends_on:
+        #     - prometheus      
+        #logging:
+        #options:       
+        #max-file: "1"
+        #max-size: "1m"       
 
   grafana:
     network_mode: bridge       
@@ -105,22 +105,22 @@ services:
         max-file: "1"
         max-size: "1m"       
 
-  cadvisor:
-       image: budry/cadvisor-arm
-       volumes:
-                - /:/rootfs:ro
-                - /var/run:/var/run:rw
-                - /sys:/sys
-                - /var/lib/docker/:/var/lib/docker:ro
-                - /dev/disk/:/dev/disk:ro
-       ports:
-          - 8080:8080        
-       restart: always
-       privileged: true
-       logging:
-        options:
-            max-file: "1"
-            max-size: "1m"
+        #cadvisor:
+        #image: budry/cadvisor-arm
+        # volumes:
+        #        - /:/rootfs:ro
+        #       - /var/run:/var/run:rw
+        #       - /sys:/sys
+        #       - /var/lib/docker/:/var/lib/docker:ro
+        #       - /dev/disk/:/dev/disk:ro
+        # ports:
+        #  - 8080:8080        
+        #restart: always
+        #privileged: true
+        #logging:
+        #options:
+        #    max-file: "1"
+        #    max-size: "1m"
 volumes:
         prometheus_data: {}
         grafana_data: {}   
