--- a/prometheus.yml
+++ b/prometheus.yml
@@ -4,38 +4,48 @@ scrape_configs:
     static_configs:
       - targets:
           - localhost:9090
-            
+        labels:
+            group: 'prometheus'      
 
   - job_name: node_exporter
     scrape_interval: 5s
     static_configs:
       - targets:
           - 192.168.0.6:9100
+        labels:
+            group: 'node_exporter'    
 
   - job_name: grafana
     scheme: https
+    tls_config:
+            insecure_skip_verify: true
     scrape_interval: 5s
     static_configs:
       - targets:
           - 192.168.0.6:3000
+        labels:
+            group: 'grafana'    
 
-  - job_name: alertmanager
-    scrape_interval: 5s
-    static_configs:
-      - targets:
-          - 192.168.0.6:9093
+            # - job_name: alertmanager
+    # scrape_interval: 5s
+    #  static_configs:
+            # - targets:
+              #         - 192.168.0.6:9093
           
   - job_name: blackbox_exporter
     scrape_interval: 5s
     static_configs:
       - targets:
           - 192.168.0.6:9115
+        labels:
+            group: 'blackbox_exporter'     
 
-  - job_name: cadvisor
-    scrape_interval: 5s
-    static_configs:
-            - targets:
-                    - 192.168.0.6:8080
+
+            #- job_name: cadvisor
+    #scrape_interval: 5s
+    # static_configs:
+            # - targets:
+                    # - 192.168.0.6:8080
 
   - job_name: ping
     scrape_interval: 1s
