--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,12 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+.htpasswd
+certs/
+grafana/grafana.crt
+grafana/grafana.key
+nginx/.htpasswd
+nginx/monitoring.crt
+nginx/monitoring.key
+.docker-compose.yml.swp
+
