--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,17 @@
 version: '2.0'
 services:
   prometheus:
+    container_name: prometheus       
     network_mode: bridge
-    image: evns/rpi-prometheus
-    expose:
-      - "9090"
+    image: prom/prometheus:latest
+    ports:
+      - "9090:9090"
+    user: "root"
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
       - prometheus_data:/prometheus 
     command:
       - --config.file=/etc/prometheus/prometheus.yml
-      - --web.external-url=https://localhost/prometheus
-      - --web.route-prefix=/
     restart: always
     logging:
       options:       
@@ -19,6 +19,7 @@ services:
         max-size: "1m"  
 
   grafana:
+    container_name: grafana      
     network_mode: bridge       
     image: grafana/grafana:latest
     user: "104"
@@ -38,6 +39,7 @@ services:
         max-size: "1m"       
 
   nginx:
+    container_name: nginx      
     network_mode: bridge        
     image: nginx:latest
     ports:
@@ -53,22 +55,6 @@ services:
       options:       
         max-file: "1"
         max-size: "1m"       
-
-  blackbox_exporter:
-    network_mode: bridge
-    image: p0sa/blackbox_exporter_pi:latest
-    restart: always
-    ports:
-      - 9115:9115
-    links: 
-      - prometheus:prometheus
-    depends_on:
-            - prometheus   
-    logging:
-      options:       
-        max-file: "1"
-        max-size: "1m"       
- 
 
 volumes:
         prometheus_data: {}
