--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,30 +1,25 @@
 scrape_configs:      
 
   - job_name: prometheus
-    scrape_interval: 5s
+    scrape_interval: 15s
     static_configs:
      - targets:
              - localhost:9090
                
-
   - job_name: node_exporter
-    scrape_interval: 5s
+    scrape_interval: 15s
     static_configs:
      - targets:
          - 192.168.0.6:9100
-       labels:
-            group: 'node_exporter'    
 
   - job_name: grafana
     scheme: https
     tls_config:
             insecure_skip_verify: true
-    scrape_interval: 5s
+    scrape_interval: 15s
     static_configs:
       - targets:
           - 192.168.0.6:3000
-        labels:
-            group: 'grafana'    
 
             # - job_name: alertmanager
     # scrape_interval: 5s
@@ -32,43 +27,18 @@ scrape_configs:
             # - targets:
               #         - 192.168.0.6:9093
           
-  - job_name: blackbox_exporter
+
+
+  - job_name: loki
     scrape_interval: 5s
     static_configs:
-      - targets:
-          - 192.168.0.6:9115
-        labels:
-            group: 'blackbox_exporter'     
+        - targets: 
+            - 192.168.0.6:3100
 
-
-            #- job_name: cadvisor
-    #scrape_interval: 5s
-    # static_configs:
-            # - targets:
-                    # - 192.168.0.6:8080
 
   - job_name: flowercare
     scrape_interval: 45s
     static_configs:
         - targets: 
             - 192.168.0.6:9294
-
-
-  - job_name: ping
-    scrape_interval: 1s
-    metrics_path: /probe
-    params:
-      module: [icmp]
-    static_configs:
-      - targets:
-              - google.de
-              - localhost
-              - prometheus.io  
-    relabel_configs:
-      - source_labels: [__address__]
-        target_label: __param_target
-      - source_labels: [__param_target]
-        target_label: instance
-      - target_label: __address__
-        replacement: 192.168.0.6:9115  
 
