--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,7 +57,9 @@ services:
     image: grafana/promtail:latest
     volumes:
       - /var/log:/var/log
-    #command: -config.file=/etc/promtail/docker-config.yaml
+      - ./promtail.yml:/etc/promtail/promtail.yml
+    command: -config.file=/etc/promtail/promtail.yaml
+    restart: always
 
 volumes:
         prometheus_data: {}
