--- a/promtail.yml
+++ b/promtail.yml
@@ -7,8 +7,7 @@ positions:
   filename: /tmp/positions.yaml
 
 client:
-
-  url: http://localhost:3100/loki/api/v1/push
+   url: http://loki:3100/loki/api/v1/push
 
 scrape_configs:
 
@@ -18,10 +17,5 @@ scrape_configs:
         - localhost
       labels:
         job: all-logs
-        env: prod
-        host: monitoring
         __path__: /var/log/*log
-
-  http_listen_port: 9080
-  grpc_listen_port: 0
 
