--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,11 @@ services:
       - --config.file=/etc/prometheus/prometheus.yml
     restart: always
     logging:
-      options:       
+      driver: loki       
+      options:    
+        loki-url: http://loki:3100/loki/api/v1/push
+        loki-retries: 5
+        loki-batch-size: 400       
         max-file: "1"
         max-size: "1m"  
 
@@ -65,4 +69,4 @@ services:
 
 volumes:
    prometheus_data: {}
-   grafana_data: {}   
+   groafana_data: {}   
